--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     ext.kotlin_version = "1.4.21"
     repositories {
@@ -6,30 +7,11 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-        implementation 'androidx.core:core-ktx:1.3.2'
-        implementation 'androidx.appcompat:appcompat:1.2.0'
-        implementation 'com.google.android.material:material:1.2.1'
-        implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-        testImplementation 'junit:junit:4.+'
-        androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-        androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-        // Coroutine
-        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-
-        // Room Database
-        def room_version = "2.2.6"
-
-        implementation "androidx.room:room-runtime:$room_version"
-        kapt "androidx.room:room-compiler:$room_version"
-        implementation  'androidx.room:room-ktx:2.2.6'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    }
-    dependencies {
-        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     }
 }
 
